# mdbook

./: .gitignore  LICENSE  README.md  pyproject.toml
docs/: 01-overview.md  02-architecture.md  03-compilation-flow.md  04-cross-references.md  05-interfaces.md  06-extending.md  manual.html
docs/img/: README.md
examples/: 01-coupling-and-cohesion.md  02-dependency-direction.md  03-validation-at-the-boundary.md  04-pure-functions-and-side-effects.md  05-when-not-to-add-structure.md  demo.html  tomo1-fundamentos.md  tomo2-avanzado.md  volume1-fundamentals.md  volume2-advanced.md
packaging/: launch_gui.py  mdbook.spec
src/mdbook/: __init__.py  cli.py  config.py
src/mdbook/engine/: __init__.py  compiler.py  crossref.py  model.py  parser.py  renderer.py
src/mdbook/engine/assets/: app.js  style.css  template.html
src/mdbook/gui/: __init__.py  app.py
tests/: conftest.py
tests/data/: tomo1.md  tomo2.md  volume1.md  volume2.md
tests/regression/: README.md
tests/smoke/: test_build_end_to_end.py
tests/unit/: test_architecture.py  test_config.py  test_crossref.py  test_parser.py
