[project]
name = "mdbook"
version = "1.0.0"
description = "Compile Markdown files into a single HTML study file: navigable, searchable, light/dark theme, copy-code buttons."
readme = "README.md"
license = "MIT"
license-files = ["LICENSE"]
requires-python = ">=3.12"
authors = [
    { name = "Alejandro Segura", email = "Alejandro_segura85@hotmail.com" }
]
dependencies = [
    "pydantic>=2.6",
    "typer>=0.12",
    "rich>=13.7",
    "markdown-it-py>=3.0",
    "customtkinter>=5.2",
]

[project.scripts]
mdbook = "mdbook.cli:app"
mdbook-gui = "mdbook.gui.app:main"

[dependency-groups]
dev = [
    "pytest>=8.0",
    "ruff>=0.4",
    "mypy>=1.10",
    "pyinstaller>=6.6",
]

[build-system]
requires = ["uv_build>=0.10.12,<0.11.0"]
build-backend = "uv_build"

[tool.pytest.ini_options]
testpaths = ["tests"]
markers = [
    "unit: unit tests of the engine (parser, crossref, config)",
    "smoke: end-to-end smoke test that compiles the sample .md files",
    "regression: tests that pin down an already-fixed bug",
]

[tool.ruff]
src = ["src", "tests"]
line-length = 100
target-version = "py312"

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B", "SIM", "RUF"]

[tool.mypy]
python_version = "3.12"
strict = true
files = ["src", "tests"]

# Engine, config and interfaces are checked in strict mode (above).
# customtkinter ships no type stubs, so we ignore it here only.
[[tool.mypy.overrides]]
module = ["customtkinter.*"]
ignore_missing_imports = true
